[gd_scene load_steps=8 format=2]

[ext_resource path="res://Audio.gd" type="Script" id=1]
[ext_resource path="res://InvalidInput.wav" type="AudioStream" id=2]
[ext_resource path="res://OptionSelected.wav" type="AudioStream" id=3]
[ext_resource path="res://Track1.wav" type="AudioStream" id=4]
[ext_resource path="res://Track2.wav" type="AudioStream" id=5]
[ext_resource path="res://Text.wav" type="AudioStream" id=6]
[ext_resource path="res://Exit.wav" type="AudioStream" id=7]

[node name="Audio" type="Node"]
script = ExtResource( 1 )

[node name="InvalidInput" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0

[node name="OptionSelected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 1.3

[node name="Text" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="Track1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="Track2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0

[node name="Exit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Tween" type="Tween" parent="."]
[connection signal="finished" from="Text" to="." method="_on_Text_finished"]
